--- a/frontend/src/app/component/horse/horse.component.html
+++ b/frontend/src/app/component/horse/horse.component.html
@@ -92,7 +92,7 @@
               <i class="bi bi-info-lg"></i>
             </a>
             <a class="btn btn-sm responsive-warning-button"
-               [routerLink]="['edit', horse.id]"
+               [routerLink]="[horse.id, 'edit']"
                aria-label="Edit horse">
               <i class="bi bi-pencil"></i>
             </a>
