[5] add detail view with route for horses stored in the system

--- a/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
+++ b/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
@@ -1,6 +1,17 @@
 
-<h1 class="display-1">{{heading}}</h1>
-
+<div>
+  <div class="float-end" id="detailsButton">
+    <button class="btn btn-sm responsive-warning-button"
+            *ngIf="!modeIsCreate"
+            (click)="goToDetailPage(this.horse)"
+            name="detailsButton" type="button"
+    >
+      <i class="bi bi-info-lg"></i>
+      Details
+    </button>
+  </div>
+  <h1 class="display-1">{{heading}}</h1>
+</div>
 
 <form #form="ngForm" (ngSubmit)="onSubmit(form)">
   <div class="row">
