--- a/frontend/src/app/component/horse/horse.component.html
+++ b/frontend/src/app/component/horse/horse.component.html
@@ -88,6 +88,7 @@
         <td>
           <div class="btn-group">
             <a class="btn btn-sm responsive-info-button"
+               [routerLink]="[horse.id]"
                aria-label="Show horse details">
               <i class="bi bi-info-lg"></i>
             </a>
