[5, 18] fix wrong indentation in details view

--- a/frontend/src/app/component/horse/horse-detail/horse-detail.component.html
+++ b/frontend/src/app/component/horse/horse-detail/horse-detail.component.html
@@ -1,5 +1,4 @@
 <div>
-  <h1 class="display-1">Details of Horse</h1>
   <div class="float-end" id="editButton">
     <button class="btn btn-sm responsive-warning-button"
             type="button"
@@ -10,6 +9,7 @@
       Edit
     </button>
   </div>
+  <h1 class="display-1">Details of Horse</h1>q
 </div>
 
 <form>
