[9, 24] add path and router link for Family Tree view

--- a/frontend/src/app/component/horse/horse.component.html
+++ b/frontend/src/app/component/horse/horse.component.html
@@ -101,6 +101,11 @@
                aria-label="Show horse details">
               <i class="bi bi-info-lg"></i>
             </a>
+            <a class="btn btn-sm responsive-tree-button"
+              [routerLink]="[horse.id, 'familytree']"
+              aria-label="Show horse's family tree">
+              <i class="bi bi-list-nested"></i>
+            </a>
             <a class="btn btn-sm responsive-warning-button"
                [routerLink]="[horse.id, 'edit']"
                aria-label="Edit horse">
