[5, 18] remove wrong header in detail view

--- a/frontend/src/app/component/horse/horse-detail/horse-detail.component.html
+++ b/frontend/src/app/component/horse/horse-detail/horse-detail.component.html
@@ -9,7 +9,7 @@
       Edit
     </button>
   </div>
-  <h1 class="display-1">Details of Horse</h1>q
+  <h1 class="display-1">Details of Horse</h1>
 </div>
 
 <form>
