[5, 18] display gender as symbol in the detail view, add styling for buttons

--- a/frontend/src/app/component/horse/horse-detail/horse-detail.component.html
+++ b/frontend/src/app/component/horse/horse-detail/horse-detail.component.html
@@ -55,7 +55,12 @@
         <div class="col-md-10 col-lg-8"
         >
           <td class="form-control form-control-plaintext">
-            {{horse.sex}}
+            <span *ngIf="horse.sex==='FEMALE'">
+              <i class="bi bi-gender-female"></i>
+            </span>
+            <span *ngIf="horse.sex==='MALE'">
+              <i class="bi bi-gender-male"></i>
+            </span>
           </td>
         </div>
       </div>
