[6] add a reset sex option for searching horses

--- a/frontend/src/app/component/horse/horse.component.html
+++ b/frontend/src/app/component/horse/horse.component.html
@@ -59,7 +59,7 @@
             (change)="searchHorses()"
             [(ngModel)]=searchSex
             >
-      <option [ngValue]="undefined" disabled selected>Select Sex</option>
+      <option value="" (click)="clearFilter()">Select Sex</option>
       <option value="FEMALE">Female</option>
       <option value="MALE">Male</option>
     </select>
